/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package deviceinfra.api.error.id;

option java_package = "com.google.devtools.deviceinfra.api.error.id.proto";
option java_outer_classname = "ErrorCodeRangeProto";

// Error code ranges for defined ErrorIds.
enum ErrorCodeRange {
  ERROR_CODE_RANGE_UNSPECIFIED = 0;

  // For legacy error codes.
  reserved 1 to 2999999;
  LEGACY_ERROR_ID_MAX_CODE = 3000000;

  // For InfraErrorId.
  INFRA_ERROR_ID_MIN_CODE = 3000001;
  INFRA_ERROR_ID_MAX_CODE = 4000000;

  // For BasicErrorId.
  BASIC_ERROR_ID_MIN_CODE = 4000001;
  BASIC_ERROR_ID_MAX_CODE = 5000000;

  // For AndroidErrorId.
  ANDROID_ERROR_ID_MIN_CODE = 5000001;
  ANDROID_ERROR_ID_MAX_CODE = 6000000;
}
